--- a/index.html
+++ b/index.html
@@ -197,5 +197,13 @@
       if(b) b.addEventListener('click', ()=>{ backToTables(); });
     });
   </script>
+<!-- Custom Alert -->
+<div id="customAlert" class="custom-alert">
+  <div class="custom-alert-box">
+    <p id="customAlertMessage">Thông báo</p>
+    <button onclick="closeCustomAlert()">Xác nhận</button>
+  </div>
+</div>
+
 </body>
 </html>
